--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -35,14 +35,17 @@
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-query-devtools": "^5.8.3",
     "@tanstack/react-table": "^8.10.7",
+    "@tinymce/tinymce-react": "^6.0.0",
     "@wojtekmaj/react-timerange-picker": "^5.4.4",
     "axios": "^1.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "eslint-config-prettier": "^9.0.0",
     "immer": "^10.0.3",
     "laravel-echo": "^1.15.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "moment": "^2.29.4",
     "next": "14.0.4",
@@ -62,6 +65,7 @@
     "rsuite": "^5.46.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
