--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rsuite": "^5.46.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^7.7.2",
     "vaul": "^1.1.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
