--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-query-devtools": "^5.8.3",
     "@tanstack/react-table": "^8.10.7",
     "@tinymce/tinymce-react": "^6.0.0",
+    "@types/lodash": "^4.17.16",
     "@wojtekmaj/react-timerange-picker": "^5.4.4",
     "axios": "^1.6.1",
     "class-variance-authority": "^0.7.0",
